// Copyright IBM Corp. All Rights Reserved.
// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

option go_package = "github.ibm.com/blockchaindb/server/pkg/blockstore";

package blockstore;

message BlockLocation {
    uint64 file_chunk_num = 1;
    int64 offset = 2;
    int64 length = 3;
}
